modules/gdscript/tests/scripts/parser/errors/redefine_keyword.gd
func test():
	var while = "it's been a while"
